--- a/Test/homework100/styles/styles-hw10 — копия.css
+++ b/Test/homework100/styles/styles-hw10 — копия.css
@@ -1,8 +1,9 @@
-:root {
-    --main-bg: rgb(44, 44, 44);
-    --base-width: 200px;
-    --icon-color:#03A9F4;
-}
+@media screen and (max-width: 525px) {
+    .body {
+        float: none;
+        width: 100%;
+    }
+  }
 
 body {
     background: #E5E5E5;
@@ -13,70 +14,62 @@ body {
 
 .conteiner {
     height: 4028px;
-    max-width: 1440px;
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    justify-content: center;
+    width: 1440px;
 }
 
-.header {
-    box-sizing: border-box;
-    position: relative;
-    width: 100%;
+.baner {
+    height: 665px;
+    width: 1440px;
     background: #F4F6F9;
-    flex-direction: row;
     display: flex;
 }
 
-.header-1 {
-    padding-top: 4%;
-    padding-left: 11.5%;
-    padding-bottom: 11%;
-    flex-basis: 45%;
+.baner-1 {
+    width: 483px;
+    height: 665px;
 }
 
 .logo-1 {
     height: 32px;
     width: 99px;
+    margin-left: 163px;
     margin-top: 61px;
 }
 
-.header-text-1 {
-    height: 19.6%;
-    width: 34.83vw;
-    font-family: 'Lato', sans-serif;
-    font-size: 2.25rem;
+.baner-text-1 {
+    height: 96px;
+    width: 546px;
+    font-family: 'Lato', sans-seri;
+    font-size: 36px;
     font-weight: 700;
     line-height: 48px;
     letter-spacing: 0.03em;
     text-align: left;
     color: #333333;
-    margin-top: 21%;
+    margin-top: 133px;
+    margin-left: 163px;
 }
 
-.header-text-2 {
-    height: 11%;
-    width: 28.9vw;
+.baner-text-2 {
+    height: 52px;
+    width: 453px;
     font-family: 'Lato';
-    font-size: 1.125rem;
+    font-size: 18px;
     font-weight: 400;
     line-height: 26px;
     letter-spacing: 0em;
     text-align: left;
     color: #4F4F4F;
-    margin-top: 4.51%;
+    margin-top: 30px;
+    margin-left: 163px;
 }
 
 .apps-1 {
     height: 47px;
-    min-width: 44px;
     width: 348px;
-    min-width: 315px;
     display: flex;
-    margin-top: 8.3%;
-    flex-direction: row;
-    justify-content: space-between;
+    margin-top: 50px;
+    margin-left: 163px;
 }
 
 .app-1, .app-2 {
@@ -89,41 +82,40 @@ body {
     margin-right: 36px;
 }
 
-.header-2 {
+.baner-2 {
     height: 668px;
     width: 993px;
     background: url(../img/Frame.png);
 }
 
-/*.header-img {
+.baner-img {
     height: 626px;
     width: 776px;
     margin-bottom: 39px;
-}*/
+}
 
 .blok1 {
-    height: 100%;
-    width: 100vw;
+    height: 592px;
+    width: 1440px;
     display: flex;
-    margin-right: 700px;
-    /*background: url(../homework10/img/Rectangle.png) no-repeat;*/
-    position: relative;
-    flex-direction: row;
+    background: linear-gradient(270deg, #FFFFFF 5.16%, rgba(255, 255, 255, 0) 67.14%),
+linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5));
 }
 
-.blok1-img {
+/*.blok1-img {
     height: 592px;
     width: 805px;
+    background: linear-gradient(270deg, #FFFFFF 5.16%, rgba(255, 255, 255, 0) 67.14%),
+linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5));
+    background-image: linear-gradient(270deg, #FFFFFF 5.16%, rgba(255, 255, 255, 0) 67.14%),
+linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5));
     position: absolute;
-    z-index: 3;
-}
+    z-index: 4;
+}*/
 
 .blok1-left {
     height: 592px;
     width: 688px;
-    background: rgb(255,255,255);
-    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 90%);
-    z-index: 4;
 }
 
 .blok1-left-img {
@@ -131,7 +123,6 @@ body {
     height: 592px;
     width: 100%;
     background: url(../img/Rectangle.png) no-repeat;
-    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 90%);
 }
 
 /*.blok1:after {
@@ -168,7 +159,7 @@ body {
     height: 23px;
     width: 100px;
     font-family: 'Lato';
-    font-size: 1.0625rem;
+    font-size: 17px;
     font-weight: 700;
     line-height: 22px;
     letter-spacing: 0em;
@@ -258,10 +249,7 @@ body {
 .blok1-right {
     height: 592px;
     width: 635px;
-    width: 427px;
-    padding-left: 167px;
-    padding-right: 217px;
-    background: #FFFFFF;
+    margin-left: 168px;
 }
 
 .blok1-2-text-1 {
@@ -455,28 +443,7 @@ body {
     overflow: hidden; /* Hide horizontal scrollbar */
 }
 
-.slid-1 {
-    height: 161px;
-    min-width: 309px;
-    Background: #FFFFFF;
-    border-radius: 4px;
-    border: 1px solid #828282;
-    margin-right: 36px; 
-    position: relative;
-    z-index: 9;
-}
-
-.slid-1-1 {
-    height: 161px;
-    width: 309px;
-    background: rgb(255,255,255);
-    background: linear-gradient(90deg, rgba(255,255,255,1) 47%, rgba(255,255,255,0.05926120448179273) 100%);
-    margin-right: 36px;
-    z-index: 10;
-    position: absolute;
-    }
-
-.slid-2, .slid-3, .slid-4, .slid-5 {
+.slid-1, .slid-2, .slid-3, .slid-4, .slid-5 {
     height: 161px;
     min-width: 309px;
     Background: #FFFFFF;
@@ -739,81 +706,4 @@ font-size: 14px;
     height: 25px;
     width: 25px;
     margin-right: 17px;
-}
-
-@media screen and (max-width: 1440px) {
-    .header {
-        flex-basis: 80%;
-    }
-
-    .blok1 {
-        flex-basis: 100%;
-    }
-
-    .blok2 {
-        flex-basis: 100%;
-    }
-}
-
-
-@media screen and (max-width: 720px) {
-    .header {
-        margin: 0 auto;
-        padding: 0 auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        /*padding: 7% 2% 1% 2%;*/
-        flex-basis: 50%;
-    }
-
-    .header-text-1 {
-        height: 59%;
-        max-width: 8.38vw;
-        font-family: 'Lato', sans-serif;
-        font-size: 1.88em;
-        font-weight: 700;
-        line-height: 48px;
-        letter-spacing: 0.03em;
-        text-align: left;
-        color: #333333;
-        margin-top: 16.38%;
-        flex-basis: 59%;
-    }
-
-    .apps-1 {
-        flex-basis: 91.95%;
-    }
-}
-
-
-@media screen and (max-width: 360px) {
-    .header {
-        margin: 0 auto;
-        padding: 0 auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        flex-basis: 38%;
-    }
-
-    .header-text-1 {
-        height: 59%;
-        max-width: 8.38vw;
-        font-family: 'Lato', sans-serif;
-        font-size: 1.88em;
-        font-weight: 700;
-        line-height: 48px;
-        letter-spacing: 0.03em;
-        text-align: left;
-        color: #333333;
-        margin-top: 16.38%;
-        flex-basis: 59%;
-    }
-
-    .blok2 {
-        flex-basis: 23%;
-    }
 }
