--- a/Test/styles-test.css
+++ b/Test/styles-test.css
@@ -1,491 +1,42 @@
-
 body {
-  background: #ede9de; 
-}
-.container {
-  left: 50%;
-  margin: auto -50px;
-  position: absolute;
-  top: 50%;
-}
-.swing div {
-  border-radius: 50%;
-  float: left;
-  height: 1em;
-  width: 1em;
-}
-.swing div:nth-of-type(1) {
-  background: -webkit-linear-gradient(left, #385c78 0%, #325774 100%);
-  background: linear-gradient(to right, #385c78 0%, #325774 100%);
-}
-.swing div:nth-of-type(2) {
-  background: -webkit-linear-gradient(left, #325774 0%, #47536a 100%);
-  background: linear-gradient(to right, #325774 0%, #47536a 100%);
-}
-.swing div:nth-of-type(3) {
-  background: -webkit-linear-gradient(left, #4a5369 0%, #6b4d59 100%);
-  background: linear-gradient(to right, #4a5369 0%, #6b4d59 100%);
-}
-.swing div:nth-of-type(4) {
-  background: -webkit-linear-gradient(left, #744c55 0%, #954646 100%);
-  background: linear-gradient(to right, #744c55 0%, #954646 100%);
-}
-.swing div:nth-of-type(5) {
-  background: -webkit-linear-gradient(left, #9c4543 0%, #bb4034 100%);
-  background: linear-gradient(to right, #9c4543 0%, #bb4034 100%);
-}
-.swing div:nth-of-type(6) {
-  background: -webkit-linear-gradient(left, #c33f31 0%, #d83b27 100%);
-  background: linear-gradient(to right, #c33f31 0%, #d83b27 100%);
-}
-.swing div:nth-of-type(7) {
-  background: -webkit-linear-gradient(left, #da3b26 0%, #db412c 100%);
-  background: linear-gradient(to right, #da3b26 0%, #db412c 100%);
-}
-.shadow {
-  clear: left;
-  padding-top: 1.5em;
-}
-.shadow div {
-  -webkit-filter: blur(1px);
-  filter: blur(1px);
-  float: left;
-  width: 1em;
-  height: .25em;
-  border-radius: 50%;
-  background: #e3dbd2;
-}
-.shadow .shadow-l {
-  background: #d5d8d6;
-}
-.shadow .shadow-r {
-  background: #eed3ca;
-}
-@-webkit-keyframes ball-l {
-  0%, 50% {
-    -webkit-transform: rotate(0) translateX(0);
-    transform: rotate(0) translateX(0);
-  }
-  100% {
-    -webkit-transform: rotate(50deg) translateX(-2.5em);
-    transform: rotate(50deg) translateX(-2.5em);
-  }
-}
-@keyframes ball-l {
-  0%, 50% {
-    -webkit-transform: rotate(0) translate(0);
-    transform: rotate(0) translateX(0);
-  }
-  100% {
-    -webkit-transform: rotate(50deg) translateX(-2.5em);
-    transform: rotate(50deg) translateX(-2.5em);
-  }
-}
-@-webkit-keyframes ball-r {
-  0% {
-    -webkit-transform: rotate(-50deg) translateX(2.5em);
-    transform: rotate(-50deg) translateX(2.5em);
-  }
-  50%,
-  100% {
-    -webkit-transform: rotate(0) translateX(0);
-    transform: rotate(0) translateX(0);
-  }
-}
-@keyframes ball-r {
-  0% {
-    -webkit-transform: rotate(-50deg) translateX(2.5em);
-    transform: rotate(-50deg) translateX(2.5em);
-  }
-  50%,
-  100% {
-    -webkit-transform: rotate(0) translateX(0);
-    transform: rotate(0) translateX(0)
-  }
-}
-@-webkit-keyframes shadow-l-n {
-  0%, 50% {
-    opacity: .5;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-  100% {
-    opacity: .125;
-    -webkit-transform: translateX(-1.57em);
-    transform: translateX(-1.75em);
-  }
-}
-@keyframes shadow-l-n {
-  0%, 50% {
-    opacity: .5;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-  100% {
-    opacity: .125;
-    -webkit-transform: translateX(-1.75);
-    transform: translateX(-1.75em);
-  }
-}
-@-webkit-keyframes shadow-r-n {
-  0% {
-    opacity: .125;
-    -webkit-transform: translateX(1.75em);
-    transform: translateX(1.75em);
-  }
-  50%,
-  100% {
-    opacity: .5;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-@keyframes shadow-r-n {
-  0% {
-    opacity: .125;
-    -webkit-transform: translateX(1.75em);
-    transform: translateX(1.75em);
-  }
-  50%,
-  100% {
-    opacity: .5;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-.swing-l {
-  -webkit-animation: ball-l .425s ease-in-out infinite alternate;
-  animation: ball-l .425s ease-in-out infinite alternate;
-}
-.swing-r {
-  -webkit-animation: ball-r .425s ease-in-out infinite alternate;
-  animation: ball-r .425s ease-in-out infinite alternate;
-}
-.shadow-l {
-  -webkit-animation: shadow-l-n .425s ease-in-out infinite alternate;
-  animation: shadow-l-n .425s ease-in-out infinite alternate;
-}
-.shadow-r {
-  -webkit-animation: shadow-r-n .425s ease-in-out infinite alternate;
-  animation: shadow-r-n .425s ease-in-out infinite alternate;
-}
-
-
-
-/*:root {
-    --main-bg: rgb(44, 44, 44);
-    --base-width: 200px;
-    --icon-color:#03A9F4;
-}
-
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 20px;
-    row-gap: 20px;
-    justify-content: center;
-    min-height: 100vh;
-    margin: 0 auto;
-    max-width: 1200px;
-    background-color: var(--main-bg);
-}
-
-@media screen and (max-width: 1200px) {
-    .container {
-        column-gap: 4px;
-    }
-
-    .box {
-        flex-basis: 30%;
-    }
-}
-
-@media screen and (max-width: 992px) {
-    .box {
-        flex-basis: 47%;
-    }
-}
-
-.box {
-    height: var(--base-width);
-    width: var(--base-width);
-    background-color: green;
-} 
-
-@media screen and (max-width: 576px) {
-    .container {
-        column-gap: 0px;
-    }
-    
-    .box {
-        flex-basis: 100%;
-    }
-}
-
-@media screen and (max-width: 360px) {
-    .box {
-        background-color: rgb(161, 245, 161);
-    }
-}
-*/
-
-
-/*.Background {
-    height: 150px;
-    width: 200px;
-    Background: #f53939;
-    background-color: linear-gradient(270deg, #FFFFFF 5.16%, rgba(255, 255, 255, 0) 67.14%), rgba(255, 255, 255, 0.5);;
-    border-radius: 4px;
-    border: 1px solid #828282;
-    margin-right: 36px;  
-    z-index: 1;
-    position: absolute;
-}
-
-.gradient {
-height: 150px;
-width: 200px;
-background: rgb(255,255,255);
-background: linear-gradient(90deg, rgba(255,255,255,1) 47%, rgba(255,255,255,0.05926120448179273) 100%);
-border: 1px solid #828282;
-margin-right: 36px;
-z-index: 2;
-position: absolute;
-}
-
-/*.blok1 {
-    height: 592px;
-    width: 1440px;
-    display: flex;
-    background: url(../homework10/img/Rectangle.png) no-repeat;
-    z-index: 3;
-}
-    
-.blok1-left {
-    height: 592px;
-    width: 688px;
-    left: 100px;
-    background: rgb(255,255,255);
-    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 48%);
-    z-index: 4;   
-}
-
-/*.blok1-left-img {
-    position: absolute;
-    height: 592px;
+    background-color: aqua;
     width: 100%;
-    z-index: 4;
+    height: 100vh;
+    line-height: 100vh;
 }
 
-.blok1 {
-    height: 592px;
-    width: 1440px;
-    display: flex;
-    margin-right: 700px;
-    background: rgb(255,255,255);
-    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 48%);
-    position: relative;
-    z-index: 4;
+.container-sm {
+    background-color:#f59b9b ;
 }
 
-.blok1-img {
-    height: 592px;
-    width: 805px;
-    position: absolute;
-    z-index: 3;
+.container-md {
+    background-color:hsl(61, 39%, 56%) ;
 }
 
-.blok1-left {
-    height: 592px;
-    width: 688px;
-    /*background: url(../homework10/img/Rectangle.png) no-repeat;
-    position: relative;
+.container-lg {
+    background-color:#70be7a ;
 }
 
-/*.blok1-left-img {
-    position: absolute;
-    height: 592px;
-    width: 100%;
+.container-xl {
+    background-color:#627bcc ;
 }
 
-/*.blok1:after {
-    height: 592px;
-    width: 1440px;
-    position: absolute;
-    z-index: 7;
-    background: linear-gradient(270deg, #FFFFFF 5.16%, rgba(255, 255, 255, 0) 67.14%),
-    linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5));
-  }
-
-.blok1-left-1-grid {
-    height: 218px;
-    width: 360px;
-    border-radius: 4px;
-    display: grid;
-    background: #FFFFFF;
-    grid-template-rows: 169px 49px; 
-    grid-template-columns: 180px 180px; 
-    margin-top: 109px;
-    margin-left: 163px;
-    position: absolute;
-    z-index: 3;
+.container-xxl {
+    background-color:#cc75cc ;
 }
 
-.blok1-element1 {
-    height: 125px;
-    width: 124px;
-    margin-top: 27px;
-    margin-left: 16px;
+.row {
+    height: 200px;
 }
 
-.blok1-element1-text1 {
-    height: 23px;
-    width: 100px;
-    font-family: 'Lato';
-    font-size: 17px;
-    font-weight: 700;
-    line-height: 22px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #4F4F4F;
+.one {
+    background-color: darkblue;
 }
 
-.blok1-element1-text2 {
-    height: 50px;
-    width: 77px;
-    font-family: 'Lato';
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #000000;
-    margin-top: 13px;
+.two {
+    background-color: rgb(7, 77, 30);
 }
 
-.blok1-element1-text3 {
-    height: 25px;
-    width: 124px;
-    font-family: 'Lato';
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 21px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #000000;
-    margin-top: 14px;
+.three {
+    background-color: rgb(117, 58, 10);
 }
-
-.blok1-element2 {
-    height: 85px;
-    width: 180px;
-    margin-top: 47px;
-    margin-right: 16px;
-}
-
-.blok1-element2-img1 {
-    height: 84px;
-    width: 71px;
-    z-index: 1;
-}
-
-.blok1-element2-img2 {
-    height: 84px;
-    width: 84px;
-    z-index: 2;
-}
-
-.blok1-element3 {
-    height: 49px;
-    width: 360px;
-    background: #EEEEEE;
-    border-radius: 0px 0px 4px 4px;
-}
-
-.blok1-element3-text1 {
-    font-family: 'Lato';
-    font-size: 19px;
-    font-weight: 400;
-    line-height: 25px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #4F4F4F;
-    margin-top: 14px;
-    margin-left: 16px;
-}
-
-.blok1-element4 {
-    height: 218.05711364746094px;
-    width: 360px;
-    border-radius: 4px;
-    margin-left: 269px;
-    margin-top: 296px;
-    z-index: 3;
-}
-
-.blok1-1 {
-    height: 592px;
-    width: 805px;
-    display: flex;
-}
-
-.blok1-right {
-    height: 592px;
-    width: 427px;
-    padding-left: 167px;
-    padding-right: 217px;
-    background: #FFFFFF;
-}
-
-.blok1-2-text-1 {
-    height: 22px;
-    width: 582px;
-    font-family: 'Lato';
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 21px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #00ADEE;
-    margin-top: 133px;
-    margin-right: 61px;
-}
-
-.blok1-2-text-2 {
-    height: 37px;
-    width: 426px;
-    font-family: 'Lato';
-    font-size: 28px;
-    font-weight: 700;
-    line-height: 37px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #333333;
-    margin-top: 23px;
-}
-
-.blok1-2-text-3 {
-    height: 185px;
-    width: 407px;
-    font-family: 'Lato';
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 23px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #4F4F4F;
-    margin-top: 27px;
-}
-
-.blok1-2-text-4 {
-    height: 22px;
-    width: 582px;
-    font-family: 'Lato';
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 21px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #00ADEE;
-    margin-top: 22px;
-}*/
