--- a/homework04/styles4/styles4_1.css
+++ b/homework04/styles4/styles4_1.css
@@ -43,7 +43,7 @@ contact {
     display: flex;
 }
 
-.blok_name1, .blok_name2 {
+input[type=blok_name1], [type=blok_name2] {
     height: 60px;
     width: 255px;
     border-radius: 6px;
@@ -55,14 +55,15 @@ contact {
     text-align: left;
     margin-bottom: 24px;
     background: #ffffff;
+    padding: 12px;
 }
 
-.blok_name1 {
+input[type=blok_name1] {
     margin-right: 30px; 
 }
 
 
-.Phone_Number {
+input[type=Phone_Number] {
     height: 60px;
     width: 540px;
     border-radius: 6px;
@@ -74,9 +75,10 @@ contact {
     text-align: left;
     margin-bottom: 24px;
     background: #ffffff;
+    padding: 12px;
 }
 
-.blok_Service {
+#Service { 
     height: 60px;
     width: 540px;
     border-radius: 6px;
@@ -89,6 +91,7 @@ contact {
     margin-bottom: 24px;
     background: #ffffff;
     display: flex;
+    padding: 12px;
 }
 
 .button_form_contact {
@@ -110,7 +113,8 @@ contact {
 .image6 {
     height: 14px;
     width: 14px;
-    margin-bottom: 23px;margin-left: 365px;
+    margin-bottom: 23px;
+    margin-left: 365px;
 }
 
 .blok_Service, .Phone_Number, .blok_name2, .blok_name1 {
