--- a/homework13/styles/styles-hw13.css
+++ b/homework13/styles/styles-hw13.css
@@ -10,6 +10,19 @@ body {
 .container {
   height: 4628px;
   width: 1440px;
+  padding-left: 165px;
+}
+
+head {
+  height: 38px;
+  width: 1110px;
+  display: flex;
+}
+
+.nav-link {
+  height: 24px;
+  width: 245px;
+  display: flex;
 }
 
 nav {
@@ -20,6 +33,17 @@ nav {
 .header-left {
   width: 539px;
   height: 421px;
+}
+
+.header-left-titel {
+  height: 48px;
+  width: 540px;
+}
+
+.header-left-text {
+  height: 140px;
+  width: 540px;
+  margin-top: 16px;
 }
 
 .header-img {
@@ -56,4 +80,10 @@ p {
   letter-spacing: 0px;
   text-align: left;
   color: rgb(204, 209, 228);
+}
+
+.main1 {
+  height: 742px;
+  width: 1440px;
+  padding: 160px 165px 108px 165px;
 }/*# sourceMappingURL=styles-hw13.css.map */
