--- a/homework03/styles_hw03.css/styles_hw03.css
+++ b/homework03/styles_hw03.css/styles_hw03.css
@@ -110,3 +110,529 @@ header {
     margin-left:0px;
     margin-left: 0px;
 }
+
+.banner3 {
+    height: 72px;
+    width: 560px;
+    border-radius: 16px;
+    padding: 16px;
+    background: #FFFFFF;
+    display: flex;
+    margin: 24px;
+}
+
+.img3 {
+    height: 36px;
+    width: 36px;
+    border-radius: 10px;
+    padding: 8px;
+    display: flex;
+    background: rgba(234, 76, 137, 0.1);
+    border-radius: 10px;  
+}
+
+
+.text3 {
+    height: 40px;
+    width: 347px;
+    left: 62px;
+    top: 16px;
+    font-family: 'Inter';
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+    color: #0D0C22;
+    margin-left: 10px;
+}
+
+.link3 {
+    color: #EA4C89;
+}
+
+.Button30 {
+    height: 28px;
+    width: 63px;
+    top: 22px;
+    border-radius: 8px;
+    border: 0; /* кнопка без контура*/
+    padding: 4px 10px 4px 10px;
+    display: flex;
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 20px;
+    text-align: left;
+    margin-top: 6px;
+    margin-bottom: 6px;
+    margin-left: 10px;
+}
+
+.Button31 {
+    height: 28px;
+    width: 52px;
+    top: 22px;
+    border-radius: 8px;
+    border: 0;
+    padding: 4px 10px 4px 10px;
+    display: flex;
+    color: #FFFFFF;
+    background-color: #EA4C89;
+    text-align: left;
+    font-family: Inter;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 20px;
+    text-align: left;
+    margin-top: 6px;
+    margin-bottom: 6px;
+    margin-left: 10px;
+}
+
+.banner4 {
+    height: 64px;
+    width: 560px;
+    background:#26262B;
+    display: flex;
+    margin: 24px;
+    border-radius: 10px;
+    padding: 12px 16px 12px 16px;
+}
+
+.text4 {
+    height: 40px;
+    width: 469px;
+    left: 16px;
+    top: 12px;
+    color: #FFFFFF;
+    font-family: 'Avenir LT Std';
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+}
+
+.Button4 {
+    height: 28px;
+    width: 49px;
+    left: 495px;
+    top: 18px;
+    border-radius: 8px;
+    padding: 4px 10px 4px 10px;
+    color: #26262B;
+    font-family: 'Avenir LT Std';
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+    margin-top: 4px;
+    display: flex;
+}
+
+.link4 {
+    color: #E6842E;
+}
+
+.banner3 {
+    height: 72px;
+    width: 560px;
+    border-radius: 16px;
+    padding: 16px;
+    background: #FFFFFF;
+    display: flex;
+    margin: 24px;
+}
+
+.img3 {
+    height: 36px;
+    width: 36px;
+    border-radius: 10px;
+    padding: 8px;
+    display: flex;
+    background: rgba(234, 76, 137, 0.1);
+    border-radius: 10px;  
+}
+
+
+.text3 {
+    height: 40px;
+    width: 347px;
+    left: 62px;
+    top: 16px;
+    font-family: 'Inter';
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+    color: #0D0C22;
+    margin-left: 10px;
+}
+
+.link3 {
+    color: #EA4C89;
+}
+
+.Button30 {
+    height: 28px;
+    width: 63px;
+    top: 22px;
+    border-radius: 8px;
+    border: 0; /* кнопка без контура*/
+    padding: 4px 10px 4px 10px;
+    display: flex;
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 20px;
+    text-align: left;
+    margin-top: 6px;
+    margin-bottom: 6px;
+    margin-left: 10px;
+}
+
+.Button31 {
+    height: 28px;
+    width: 52px;
+    top: 22px;
+    border-radius: 8px;
+    border: 0;
+    padding: 4px 10px 4px 10px;
+    display: flex;
+    color: #FFFFFF;
+    background-color: #EA4C89;
+    text-align: left;
+    font-family: Inter;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 20px;
+    text-align: left;
+    margin-top: 6px;
+    margin-bottom: 6px;
+    margin-left: 10px;
+}
+
+.banner4 {
+    height: 64px;
+    width: 560px;
+    background:#26262B;
+    display: flex;
+    margin: 24px;
+    border-radius: 10px;
+    padding: 12px 16px 12px 16px;
+}
+
+.text4 {
+    height: 40px;
+    width: 469px;
+    left: 16px;
+    top: 12px;
+    color: #FFFFFF;
+    font-family: 'Avenir LT Std';
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+}
+
+.Button4 {
+    height: 28px;
+    width: 49px;
+    left: 495px;
+    top: 18px;
+    border-radius: 8px;
+    padding: 4px 10px 4px 10px;
+    color: #26262B;
+    font-family: 'Avenir LT Std';
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+    margin-top: 4px;
+    display: flex;
+}
+
+.link4 {
+    color: #E6842E;
+}
+
+.blok1 {
+    height: 206px;
+    width: 760px;
+    display: flex;
+
+}
+
+.banner51 {
+    height: 32px;
+    width: 312px;
+    left: 24px;
+    top: 150px;
+    justify: space-between;
+    display: flex;    
+}
+
+.banner5 {
+    height: 206px;
+    width: 360px;
+    padding: 24px;
+    background: #1C2540F2;
+    display: flex;
+    margin: 24px;
+    border-radius: 10px;
+}
+
+.text50 {
+    height: 20px;
+    width: 126px;
+    font-family:'Roboto';
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20px;
+    text-align: left;
+    color: #ffffff;
+}
+
+.text51 {
+    height: 80px;
+    width: 312px;
+    top: 30px;
+    color: #ffffff;
+    font-family: 'Roboto';
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+}
+
+.text52 {
+    height: 16px;
+    width: 160px;
+    top: 8px;
+    color: #ffffff;
+    font-family: 'Roboto';
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 16px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    margin-top: 8px;
+}
+
+.Button5 {
+    height: 32px;
+    width: 85px;
+    left: 227px;
+    border-radius: 6px;
+    padding: 8px 20px 8px 20px;
+    background: #09B3AF;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 500;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 20px;
+    gap: 10px;
+    border: 0; /* без рамки*/
+    margin-left: 68px;
+
+}
+
+.banner6 {
+    height: 170px;
+    width: 360px;
+    left: 400px;
+    padding: 16px;
+    background: #ffffff;
+    display: flex;
+    margin: 40px;
+    border-radius: 10px;
+}
+
+.text60 {
+    height: 20px;
+    width: 137px;
+    font-family: 'Roboto';
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20px;
+    text-align: left;
+}
+
+.text61 {
+    height: 60px;
+    width: 328px;
+    top: 30px;
+    font-family: 'Roboto';
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+.Button60 {
+    height: 32px;
+    width: 160px;
+    border-radius: 6px;
+    padding: 8px;
+    background: #EAF0F4;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 16px;
+    text-align: center;
+    border: 0;
+}
+
+.Button61 {
+    height: 32px;
+    width: 160px;
+    left: 168px;
+    border-radius: 6px;
+    padding: 8px;
+    background: #40C1A7;
+    color: #ffffff;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 16px;
+    text-align: center;
+    border: 0;
+}
+    
+.blok2 {
+    height: 260px;
+    width: 680px;    
+    display: flex;
+    margin-top: 72px;
+}
+
+.banner7 {
+    height: 260px;
+    width: 320px;
+    border-radius: 20px;
+    padding: 24px;
+    background: #FFFFFF;
+    margin: 24px;
+}
+
+.text7 {
+    height: 48px;
+    width: 104px;
+    left: 76px;
+    font-family: 'Gilroy';
+    font-size: 28px;
+    font-weight: 900;
+    line-height: 48px;
+    text-align: center;
+    color: #15295A;
+    margin: 0px 85px 0 85px;
+    padding: 0;
+}
+
+.text71 {
+    height: 72px;
+    width: 256px;
+    top: 48px;
+    font-family: 'Inter';
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
+    color: #15295A;
+}
+
+.Button7 {
+    height: 44px;
+    width: 121px;
+    left: 99.5px;
+    top: 184px;
+    border-radius: 43px;
+    padding: 10px 32px 10px 32px;
+    background: #4A7EFF;
+    color: #FFFFFF;
+    margin: 0 77px 32px 77px;
+    border: 0;
+}
+
+.banner8 {
+    height: 137px;
+    width: 320px;
+    left: 360px;
+    border-radius: 4px;
+    padding: 16px;
+    background: #FFFFFF;
+    margin-top: 25px;
+    margin-left: 20px;
+}
+
+.text80 {
+    height: 60px;
+    width: 288px;
+    left: 16px;
+    top: 16px;
+    font-family: 'SF Pro Text';
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+    color: black;
+    margin-bottom: 0;
+}
+
+.banner81 {
+    height: 33px;
+    width: 288px;
+    left: 16px;
+    top: 88px;
+    justify: space-between;
+    display: flex;
+
+}
+
+.text81 {
+    height: 17px;
+    width: 84px;
+    top: 8px;
+    font-family: 'SF Pro Text';
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 17px;
+    color: #6666FF;
+    margin-bottom: 0;
+    margin-top: 10px;
+}
+
+.Button8 {
+    height: 33px;
+    width: 64px;
+    Left: 224px;
+    Radius: 4px;
+    border-radius: 4px;
+    padding: 8px;
+    gap: 10px;
+    background: #6666FF;
+    border-radius: 4px;
+    border: 0px;
+    font-family: 'SF Pro Text';
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    margin-bottom: 0;
+    margin-right: 0;
+    margin-left: 140px;
+    }
