--- a/Test/styles-test.css
+++ b/Test/styles-test.css
@@ -1,32 +1,12 @@
 body {
-    background-color: aqua;
+    background-color: rgb(229, 231, 231);
     width: 100%;
     height: 100vh;
     line-height: 100vh;
 }
 
-.container-sm {
-    background-color:#f59b9b ;
-}
-
-.container-md {
-    background-color:hsl(61, 39%, 56%) ;
-}
-
-.container-lg {
-    background-color:#70be7a ;
-}
-
-.container-xl {
-    background-color:#627bcc ;
-}
-
-.container-xxl {
-    background-color:#cc75cc ;
-}
-
-.row {
-    height: 200px;
+.container {
+    background-color:#faeded ;
 }
 
 .one {
