--- a/homework10/styles/styles-hw10.css
+++ b/homework10/styles/styles-hw10.css
@@ -6,49 +6,50 @@
 
 body {
     background: #E5E5E5;
-    margin: 0;
-    margin-top: 50px;
-    padding-left: 150px;    
+    margin-top: 50px; 
 }
 
 .conteiner {
-    height: 4028px;
-    max-width: 1440px;
+    height: 100vh;
+   /* max-width: 91.875rem;
+    min-width: 22.5rem;*/
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
+    padding: 0 15px;
     justify-content: center;
 }
 
+/*   header  */
+
 .header {
-    box-sizing: border-box;
-    position: relative;
     width: 100%;
-    background: #F4F6F9;
-    flex-direction: row;
+    box-sizing: border-box;
     display: flex;
+    position: relative;
+    flex-direction: row;
+    background: #F4F6F9;
 }
 
 .header-1 {
-    padding-top: 4%;
-    padding-left: 11.5%;
-    padding-bottom: 11%;
+    padding-top: 4.812%;
+    padding-left: 11.29%;
     flex-basis: 45%;
 }
 
-.logo-1 {
+/*.logo-1 {
     height: 32px;
     width: 99px;
-    margin-top: 61px;
-}
+    margin-top: 4.812%;
+}*/
 
 .header-text-1 {
     height: 19.6%;
-    width: 34.83vw;
+    width: 35.05vw;
     font-family: 'Lato', sans-serif;
     font-size: 2.25rem;
     font-weight: 700;
-    line-height: 48px;
+    line-height: 1.33;
     letter-spacing: 0.03em;
     text-align: left;
     color: #333333;
@@ -56,21 +57,21 @@ body {
 }
 
 .header-text-2 {
-    height: 11%;
-    width: 28.9vw;
+    height: 7.82%;
+    width: 31vw;
     font-family: 'Lato';
     font-size: 1.125rem;
     font-weight: 400;
-    line-height: 26px;
+    line-height: 1.44;
     letter-spacing: 0em;
     text-align: left;
     color: #4F4F4F;
-    margin-top: 4.51%;
+    margin-top: 5.9%;
 }
 
 .apps-1 {
-    height: 47px;
-    min-width: 44px;
+    height: 7.068%;
+    min-height: 6.617%;
     width: 348px;
     min-width: 315px;
     display: flex;
@@ -95,11 +96,89 @@ body {
     background: url(../img/Frame.png);
 }
 
+@media screen and (max-width: 1070px) {
+    .header-2 {
+       width: 65%;
+       position: relative;
+       right: -1%;
+       top: 0px;
+       }
+       .header-text-1 {
+          width: 100%;
+       }
+       .header-text-2 {
+          width: 50%;
+       }
+       .apps-1 {
+          width: 40%;
+       }
+ }
+
+ @media screen and (max-width: 720px) {
+
+    .mobile-block {
+        display: none;
+    }
+    .container-1 {
+        padding: 34px 0px 59px 0px;
+        box-sizing: border-box;
+        flex-basis: 100%;
+        align-items: center;
+    }
+   
+    .heder {
+       margin: 0 auto;
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       justify-content: center;
+       padding: 7% 2% 9% 2%;
+    }
+
+    .header-1 {
+        height: 19.6%;
+        width: 35.05vw;
+        margin-left: 5.55%;
+        padding-top: 4.812%;
+        padding-left: 11.29%;
+        padding-bottom: 9%;
+        flex-basis: 70%;
+    }
+
+    .header-2 {
+        display: none;
+    }
+
+    .header-text-1 {
+        height: 19.6%;
+        margin-bottom: 33px;
+        font-size: 30px;
+        line-height: 40px;
+        text-align: center;
+    }
+
+     .header-text-2 {
+        width: 98%;
+        margin-bottom: 50px;
+        font-size: 16px;
+        line-height: 23px;
+        text-align: center;
+    }
+
+     .apps-1 {
+        margin: 0 auto;
+        width: 340px;
+        justify-content: center;
+    }
+}
 /*.header-img {
     height: 626px;
     width: 776px;
     margin-bottom: 39px;
 }*/
+
+
+/*   blok1  */
 
 .blok1 {
     height: 100%;
@@ -126,13 +205,13 @@ body {
     z-index: 4;
 }
 
-.blok1-left-img {
+/*.blok1-left-img {
     position: absolute;
     height: 592px;
-    width: 100%;
-    background: url(../img/Rectangle.png) no-repeat;
+    width: 800px;
+    /*background: url(../img/Rectangle.png) no-repeat; 
     background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 90%);
-}
+}*/
 
 /*.blok1:after {
     height: 592px;
@@ -154,7 +233,7 @@ body {
     margin-top: 109px;
     margin-left: 163px;
     position: absolute;
-    z-index: 3;
+    z-index: 4;
 }
 
 .blok1-element1 {
@@ -246,6 +325,7 @@ body {
     border-radius: 4px;
     margin-left: 269px;
     margin-top: 296px;
+    position: absolute;
     z-index: 3;
 }
 
@@ -260,7 +340,7 @@ body {
     width: 635px;
     width: 427px;
     padding-left: 167px;
-    padding-right: 217px;
+    padding-right: 158px;
     background: #FFFFFF;
 }
 
@@ -316,6 +396,52 @@ body {
     color: #00ADEE;
     margin-top: 22px;
 }
+
+@media screen and (max-width: 720px) {
+
+
+    .blok1 {
+        width: 100%;
+        height: 360px;
+        flex-wrap: wrap-reverse;
+        padding-right: 8.819%;
+    }
+
+    .blok1-left {
+        width: 50%; 
+        text-align: center;  
+    }
+
+    .blok1-img {
+        width: 100%;
+        height: 360px;
+        background: url(../img/Rectangle.png) no-repeat; 
+        background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 90%);
+        /*background: linear-gradient(270deg, #FFFFFF 5.16%, rgba(255, 255, 255, 0) 67.14%), rgba(255, 255, 255, 0.5);*/
+        transform: rotate(360deg);
+        margin-right: 5%;
+        background-size: contain, cover;
+        padding: 0;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+        }
+
+    .blok1-right {
+        width: 50%;
+        height: 360px;
+        text-align: center;
+    }
+
+    .blok2 {
+        width: 100%;
+        flex-wrap: wrap-reverse;
+        overflow: hidden;
+}
+
+}
+/*******************   blok2  ******************/
 
 .blok2 {
     height: 716px;
@@ -741,7 +867,7 @@ font-size: 14px;
     margin-right: 17px;
 }
 
-@media screen and (max-width: 1440px) {
+/*@media screen and (max-width: 1440px) {
     .header {
         flex-basis: 80%;
     }
@@ -764,7 +890,7 @@ font-size: 14px;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        /*padding: 7% 2% 1% 2%;*/
+        /*padding: 7% 2% 1% 2%;
         flex-basis: 50%;
     }
 
@@ -816,4 +942,4 @@ font-size: 14px;
     .blok2 {
         flex-basis: 23%;
     }
-}
+}*/
